Emote Upload Polish

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<title>SeventvApp</title>
 	<base href="/">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="icon" type="image/x-icon" href="favicon.ico">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
@@ -13,6 +13,7 @@
 	
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@100;600;900&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Roboto:ital@0;1&family=Ubuntu&display=swap" rel="stylesheet">
 </head>
 
 <body class="mat-typography">
