--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&amp;display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<meta name="description" content="An open-source, free third party emote extension for Twitch with support for wide animated emotes & more">
 	
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@100;600;900&amp;display=swap" rel="stylesheet">
