--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@100;600;900&amp;display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:ital@0;1&amp;family=Ubuntu&amp;display=swap" rel="stylesheet">
+	<script src= "https://player.twitch.tv/js/embed/v1.js"></script>
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#1976d2">
 </head>
