Update About Page (#63)
* About - key feature list

* Describe more features & add contact section

* Update site meta description

* Home - add about ref under slogan

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&amp;display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-	<meta name="description" content="An open-source, free third party emote extension for Twitch with support for wide animated emotes & more">
+	<meta name="description" content="7TV is an emote service and extension for Twitch, providing custom emotes at no fee and supporting new formats such as animated wide emotes">
 	
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@100;600;900&amp;display=swap" rel="stylesheet">
