Stop SSR on all routes (#83)
* Stop SSR on all routes

* Insert OpenGraph/OEmbed by proxy

* Update environment.ts

* Upsate k8s resource limits

* Fix default tags

* Fix meta user color

--- a/src/index.html
+++ b/src/index.html
@@ -3,21 +3,18 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>SeventvApp</title>
+	<title>7TV.APP</title>
 	<base href="/">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="icon" type="image/x-icon" href="assets/favicon.png"/>
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&amp;display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-	<meta name="description" content="7TV is an emote service and extension for Twitch, providing custom emotes at no fee and supporting new formats such as animated wide emotes">
-	
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@100;600;900&amp;display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:ital@0;1&amp;family=Ubuntu&amp;display=swap" rel="stylesheet">
 	<script src= "https://player.twitch.tv/js/embed/v1.js"></script>
-  <link rel="manifest" href="manifest.webmanifest">
-  <meta name="theme-color" content="#1976d2">
+ 	<metalist></metalist>
 </head>
 
 <body class="mat-typography">
